<resources>
    <string name="app_name">Keep</string>
    <string name="action_logout">Logout</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="action_text_register">Do not have account yet? Register here</string>
    <string name="action_text_login">Already have account? Login here</string>
    <string name="error_valid_email">Enter valid e-mail</string>
    <string name="error_password">Enter valid password</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_main">Main</string>
</resources>
